# dorst

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  codecov.yml  example.toml  example.yml  prebuild.rs
.github/: labeler.yml
.github/workflows/: cd.yml  ci.yml  tests.yml
data/: org.hellbyte.dorst.desktop
src/: cli.rs  config.rs  error.rs  git.rs  gui.rs  main.rs  util.rs
src/gui/: preferences.rs  repo_box.rs  repo_object.rs  repo_row.rs  window.rs
src/gui/preferences/: imp.rs
src/gui/repo_box/: imp.rs
src/gui/repo_object/: imp.rs
src/gui/repo_row/: imp.rs
src/gui/window/: imp.rs
src/resources/: preferences.ui  repo_box.ui  repo_row.ui  resources.gresource.xml  resources.xml  shortcuts.ui  style.css  window.ui
tests/: cli.rs  default.yml  files.rs  gui.rs  helper.rs  main.rs  ssh.yml  test-key
