[package]
name = "dorst"
version = "0.7.1"
edition = "2021"
repository = "https://github.com/charlesrocket/dorst"
authors = ["charlesrocket"]
description = "Codebase backup utility"
categories = ["command-line-utilities"]
keywords = ["backup", "git"]
license = "MIT"
readme = "README.md"
exclude = [".github"]

[profile.release]
debug = 0
strip = true
lto = true

[features]
default = ["cli"]
cli = ["dep:clap", "dep:indicatif"]
gui = ["dep:adw", "dep:glib", "dep:gtk"]

[dependencies]
adw = { version = "0.4", package = "libadwaita", features = ["v1_3"], optional = true }
anyhow = "1.0"
clap = { version = "4.3", features = ["string"], optional = true }
git2 = "0.17"
glib = { version = "0.17", optional = true }
gtk = { version = "0.6", package = "gtk4", features = ["v4_10"], optional = true }
indicatif = { version = "0.17", optional = true }
openssl-sys = { version = "0.9", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rouille = "3"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
glib-build-tools = "0.17"
