[package]
name = "dorst"
version = "0.13.0"
edition = "2021"
repository = "https://github.com/charlesrocket/dorst"
authors = ["charlesrocket"]
description = "Codebase bootstrap and backup utility"
categories = ["command-line-utilities", "development-tools", "gui"]
keywords = ["backup", "git"]
license = "MIT"
readme = "README.md"
exclude = [".github", "/data"]
build = "prebuild.rs"

[profile.release]
debug = 0
strip = true
lto = true

[features]
default = ["cli", "logs"]
cli = ["dep:clap", "dep:indicatif"]
gui = ["dep:adw", "dep:glib", "dep:gtk"]
logs = ["dep:tracing", "tracing-appender", "tracing-subscriber"]

[dependencies]
adw = { version = "0.5", package = "libadwaita", features = ["v1_3"], optional = true }
anyhow = "1.0"
clap = { version = "4.3", features = ["string"], optional = true }
git2 = { version = "0.18", features = ["vendored-openssl"] }
glib = { version = "0.18", optional = true }
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"], optional = true }
indicatif = { version = "0.17", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = { version = "0.1", optional = true }
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rouille = "3"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
built = { version = "0.7", features = ["git2"] }
glib-build-tools = "0.18"
